# foundry_agents_with_obo_mcp_server

./: README.md  assign-cosmos-rbac.ps1  cosmosdb_user_query.nosql
bicep-basic-agent-setup/: azuredeploy.parameters.json  main.bicep
bicep-standard-agent-setup/: azuredeploy.parameters.json
bicep-standard-agent-setup-with-public-capability-host/: main.bicep
custom_jira_confluence_mcp_server/: .dockerignore  .env.sample  Dockerfile  atlassian_mcp_server_jira.py  atlassian_mcp_server_jira_confl.py  docker_build.ps1  docker_build.sh  pyproject.toml  requirements.txt  user_access_list.json
foundry_agent_backend_api/: README.md  foundry_agent_server.py  requirements.txt
foundry_agents/: .env.sample  create_multitool_prompt_agent.py  foundry_agent_client.py
spa_foundry_agent_webapp/: README.md  package-lock.json  package.json
spa_foundry_agent_webapp/src/: App.js  App_Working.js  authConfig.js  index.js
